--- a/src/market.html
+++ b/src/market.html
@@ -30,58 +30,54 @@
             <div class="parametrs__header">
                 <div class="parametrs__title">Основные параметры магазина</div>
             </div>
-        </div>
-        <div class="parametrs__body">
 
-            <div class="parametrs__txt">
-                <div class="container">
-                    <div class="parametrs__content">
-                        <div class="parametrs__name">Эффективная площадь</div>
-                        <ul class="parametrs__list">
-                            <li>общая 180-300 м<sup>2</sup> (от 75 стеллажей)</li>
-                            <li>Торговая 145-250 м<sup>2</sup></li>
-                            <li>складская 35-50 м<sup>2</sup></li>
-                        </ul>
-                        <ul class="parametrs__list">
-                            <li>количество ККМ 2-3 шт</li>
-                            <li>количество артикулов от 3000 ед.,</li>
-                            <li>штат 7-10 чел.</li>
-                        </ul>
-
-                        <div class="parametrs__name">Параметры наполнения</div>
-                        <ul class="parametrs__list">
-                            <li>рекомендуемая загрузка магазина перед открытием 26 500 руб./м<sup>2</sup></li>
-                            <li>торговой площади 20-25 SKU/м<sup>2</sup></li>
-                            <li>после открытия 20 000 руб/м<sup>2</sup></li>
-                        </ul>
-
-                        <div class="parametrs__name">Параметры торговли</div>
-                        <ul class="parametrs__list">
-                            <li>праздничное открытие - 1700-4000 руб/м<sup>2</sup></li>
-                            <li>после открытия: от 500 руб/ м<sup>2</sup> ориентир. Если данный параметр не
-                                достигается,
-                                есть
-                                необходимость в анализе ситуации и применении мер для исправления
-                            </li>
-                            <li>среднее количество чеков за сутки - 400 шт.</li>
-                            <li>средняя сумма чека - 300 руб.</li>
-                        </ul>
-                    </div>
+            <div class="parametrs__body">
+                <div class="parametrs__img">
+                    <img class="img-fluid d-mobile-none" src="./img/parametrs.png" width="730" height="669" alt="">
+                    <img class="img-fluid d-desktop-none" src="./img/parametrs-mobile.png" width="360" height="184"
+                         alt="">
                 </div>
-            </div>
-            <div class="parametrs__img">
-                <img class="img-fluid d-mobile-none" src="./img/parametrs.png" width="730" height="669" alt="">
-                <img class="img-fluid d-desktop-none" src="./img/parametrs-mobile.png" width="360" height="184"
-                     alt="">
+                <div class="parametrs__txt">
+                    <div class="parametrs__name">Эффективная площадь</div>
+                    <ul class="parametrs__list">
+                        <li>общая 180-300 м<sup>2</sup> (от 75 стеллажей)</li>
+                        <li>Торговая 145-250 м<sup>2</sup></li>
+                        <li>складская 35-50 м<sup>2</sup></li>
+                    </ul>
+                    <ul class="parametrs__list">
+                        <li>количество ККМ 2-3 шт</li>
+                        <li>количество артикулов от 3000 ед.,</li>
+                        <li>штат 7-10 чел.</li>
+                    </ul>
+
+                    <div class="parametrs__name">Параметры наполнения</div>
+                    <ul class="parametrs__list">
+                        <li>рекомендуемая загрузка магазина перед открытием 26 500 руб./м<sup>2</sup></li>
+                        <li>торговой площади 20-25 SKU/м<sup>2</sup></li>
+                        <li>после открытия 20 000 руб/м<sup>2</sup></li>
+                    </ul>
+
+                    <div class="parametrs__name">Параметры торговли</div>
+                    <ul class="parametrs__list">
+                        <li>праздничное открытие - 1700-4000 руб/м<sup>2</sup></li>
+                        <li>после открытия: от 500 руб/ м<sup>2</sup> ориентир. Если данный параметр не
+                            достигается,
+                            есть
+                            необходимость в анализе ситуации и применении мер для исправления
+                        </li>
+                        <li>среднее количество чеков за сутки - 400 шт.</li>
+                        <li>средняя сумма чека - 300 руб.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="number number--secondary">
+    <div class="number">
         <div class="container">
             <div class="number__body">
                 <div class="number__item">
-                    <div class="number__text">рекомендуемая наценка</div>
+                    <div class="number__text">рекомендуемая<br> наценка</div>
                     <div class="number__count">45%</div>
                 </div>
                 <div class="number__item">
@@ -89,7 +85,7 @@
                     <div class="number__count">18 <span>месяцев</span></div>
                 </div>
                 <div class="number__item">
-                    <div class="number__text">ежемесячный взнос отсутствует!</div>
+                    <div class="number__text">ежемесячный<br> взнос <span>отсутствует!</span></div>
                 </div>
             </div>
         </div>
@@ -106,34 +102,34 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-image">
-                            <img src="./img/store-decoration-1.png" alt="slide 1">
+                            <img class="img-fluid" src="./img/store-decoration-1.png" alt="slide 1">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-image">
-                            <img src="./img/store-decoration-1.png" alt="slide 2">
+                            <img class="img-fluid" src="./img/store-decoration-1.png" alt="slide 2">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-image">
-                            <img src="./img/store-decoration-1.png" alt="slide 3">
+                            <img class="img-fluid" src="./img/store-decoration-1.png" alt="slide 3">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-image">
-                            <img src="./img/store-decoration-1.png" alt="slide 4">
+                            <img class="img-fluid" src="./img/store-decoration-1.png" alt="slide 4">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-image">
-                            <img src="./img/store-decoration-1.png" alt="slide 5">
+                            <img class="img-fluid" src="./img/store-decoration-1.png" alt="slide 5">
                         </div>
                     </div>
                     <!-- Add Pagination -->
                 </div>
             </div>
         </div>
-        <div class="store-decoration__slider">
+        <div class="store-decoration__slider d-none-mobile">
             <div class="swiper two">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -169,18 +165,24 @@
         </div>
     </div>
 
-    <div id="uniform" class="uniform js-dropdown">
+    <div id="uniform" class="uniform">
         <div class="container">
             <div class="uniform__header">
                 <div class="uniform__title">Униформа</div>
-                <div class="uniform__arrow"></div>
             </div>
-            <div class="dropdown-block">
-                <div class="uniform__body">
-                    <img class="img-fluid" src="./img/uniform-1.png" width="438" height="438" alt="mpr футболка">
-                    <img class="img-fluid" src="./img/uniform-2.png" width="516" height="406" alt="mpr форма">
-                    <img class="img-fluid" src="./img/uniform-3.png" width="427" height="320" alt="mpr форма">
-                    <img class="img-fluid" src="./img/uniform-4.png" width="446" height="446" alt="mpr форма">
+
+            <div class="uniform__body">
+                <div class="swiper-container-uniform">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-1.png" width="438"
+                                                       height="438" alt="mpr футболка"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-2.png" width="516"
+                                                       height="406" alt="mpr форма"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-3.png" width="427"
+                                                       height="320" alt="mpr форма"></div>
+                        <div class="swiper-slide"><img class="img-fluid" src="./img/uniform-4.png" width="446"
+                                                       height="446" alt="mpr форма"></div>
+                    </div>
                 </div>
             </div>
         </div>
