--- a/src/learning.html
+++ b/src/learning.html
@@ -24,16 +24,9 @@
 <body>
 <div class="wrp">
     @@include('./template/_header.html')
-    <div id="learning-main" class="learning-main js-dropdown">
-        <div class="container">
-            <div class="learning-main__header">
-                <div class="learning-main__title">Учебный центр</div>
-                <div class="learning-main__arrow"></div>
-            </div>
-        </div>
-        <div class="dropdown-block">
+    <div id="learning-main" class="learning-main">
             <div class="learning-main__img">
-                <img class="img-fluid" src="./img/learning-main.png" width="1439" height="388" alt="">
+                <img class="img-fluid" src="./img/learning-main2.png" width="1439" height="810" alt="">
             </div>
             <div class="container">
                 <div class="learning-main__body">
@@ -73,11 +66,9 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
     <div class="learning-page">
         <div class="container">
-            <h1 class="learning-page__title">Учебный Центр</h1>
             <div class="learning-page__body">
                 <p>Учебный центр Красного проекта МПР создан в&nbsp;ноябре 2019 года.</p>
                 <p>Цель&nbsp;&mdash; отработка практических навыков управления розничным магазином на&nbsp;основе
