--- a/src/learning.html
+++ b/src/learning.html
@@ -25,6 +25,10 @@
 <div class="wrp">
     @@include('./template/_header.html')
     <div id="learning-main" class="learning-main">
+        <div class="learning-main__img">
+            <img class="img-fluid" src="./img/learning-main2.png" width="1439" height="810" alt="">
+            <div class="learning-main__img-logo"><img class="img-fluid" src="./img/learning-logo.png" width="440" height="46" alt=""></div>
+        </div>
             <div class="container">
                 <div class="learning-main__header">
                     <div class="learning-main__title">Учебный центр</div>
@@ -67,9 +71,7 @@
                     <button class="btn btn-primary">записаться на курс</button>
                 </div>
             </div>
-            <div class="learning-main__img">
-                <img class="img-fluid" src="./img/learning-main2.png" width="1439" height="810" alt="">
-            </div>
+
     </div>
 
     <div class="learning-page">
