"читать далее" в отзывах - пишем с заглавной буквы

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                                     в связи с приходом в город сетевиков бизнес стал не очень интересен и было принято
                                     решение открыть что-то новое, что удовлетворит спрос населения.</p>
                             </div>
-                            <a href="" class="reviews__link">читать далее...</a>
+                            <a href="" class="reviews__link">Читать далее...</a>
                         </div>
                         <div class="swiper-slide">
                             <div class="reviews__name">МПР Крымск</div>
@@ -106,7 +106,7 @@
                                 Бесспорно, рассчитываю на дальнейшее сотрудничество, т.к. за эти полтора года вижу
                                 принципиальный рост и развитие проекта.</p>
                             </div>
-                            <a href="" class="reviews__link">читать далее...</a>
+                            <a href="" class="reviews__link">Читать далее...</a>
                         </div>
                         <div class="swiper-slide">
                             <div class="reviews__name">МПР Пенза</div>
@@ -129,7 +129,30 @@
                                 <p>Бесспорно, рассчитываю на дальнейшее сотрудничество, т.к. за эти полтора года вижу
                                     принципиальный рост и развитие проекта.</p>
                             </div>
-                            <a href="" class="reviews__link">читать далее...</a>
+                            <a href="" class="reviews__link">Читать далее...</a>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="reviews__name">МПР Пенза</div>
+                            <div class="reviews__anons">
+                                <p>Не ожидали, что получится открыть магазин так быстро, с
+                                    момента подачи заявки на открытие МПР прошел месяц с небольшим.</p>
+
+                                <p>Команда открытия сработала на отлично! Благодарим их за то, что нам не пришлось
+                                    тратить деньги на аренду из-за простоя помещения. Все сделано качественно и в срок.
+                                    Магазином мы остались довольны. Особенно тем фактом, что техническое открытие
+                                    показало хорошие цифры, даже в столь непростое время. Планируем новые открытия по
+                                    формату МПР</p>
+
+                                Плюсы:
+                                <ul>
+                                    <li>Лояльность и отзывчивость отдела продаж</li>
+                                    <li>Хорошее зонирование</li>
+                                    <li>Оперативное реагирование на все наши запросы</li>
+                                </ul>
+                                <p>Бесспорно, рассчитываю на дальнейшее сотрудничество, т.к. за эти полтора года вижу
+                                    принципиальный рост и развитие проекта.</p>
+                            </div>
+                            <a href="" class="reviews__link">Читать далее...</a>
                         </div>
                     </div>
                 </div>
