slider shop fix

--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="reviews__footer">
-                <a href="" class="reviews__btn">Читать ещё отзывы</a>
+                <a href="" class="reviews__btn swiper-reviews-next">Читать ещё отзывы</a>
             </div>
         </div>
     </div>
@@ -450,11 +450,18 @@
                             <div class="video-shops__name">г. Москва</div>
                             <div class="video-shops__anons">м. Тульская, пр. Ленина, 23</div>
                         </div>
+                        <div class="swiper-slide">
+                            <figure class="video-shops__figure">
+                                <img class="img-fluid" src="https://placehold.co/325x325" width="325" height="325" alt="">
+                            </figure>
+                            <div class="video-shops__name">г. Москва</div>
+                            <div class="video-shops__anons">м. Тульская, пр. Ленина, 23</div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="video-shops__footer">
-                <a href="" class="video-shops__btn">Смотреть еще магазины</a>
+                <a href="" class="video-shops__btn swiper-shop-next">Смотреть еще магазины</a>
             </div>
         </div>
     </div>
