--- a/src/index.html
+++ b/src/index.html
@@ -651,7 +651,7 @@
                         <input class="form-control" type="text" placeholder="e-mail">
                     </div>
                     <div class="form-group">
-                        <input class="btn btn-primary" type="submit" value="оставить заявку">
+                        <input class="btn btn-primary" type="submit" value="Оставить заявку">
                     </div>
                     <div class="footer-form__check">
                         <input type="checkbox">
