--- a/src/calc.html
+++ b/src/calc.html
@@ -59,6 +59,14 @@
             <div class="investment__body">
                 <div class="investment__item">
                     <div class="investment__txt">
+                        <div class="investment__name">Инвестиции</div>
+                    </div>
+                    <div class="investment__price">80 м2</div>
+                    <div class="investment__price">100 м2</div>
+                    <div class="investment__price">170 м2</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
                         <div class="investment__name">Паушальный взнос</div>
                         <p>Услуги сервисной компании:</p>
                         <p>прорисовка периметра магазина, план расстановка ТО (торгового оборудования), 3D моделирование, зонирование магазина по товарным группам, разработка дизайна вывесок навигации и листовки открытия, аудио-видео ролики, формирование установочного заказа, сопровождение проекта, очное обучение управляющего (в теч. 6 мес с даты старта проекта)</p>
@@ -69,102 +77,117 @@
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">Новое торговое оборудование (8200 руб/ м<sup>2</sup> торг.
-                            площади)
-                        </div>
-                        <ul class="investment__list">
-                            <li>возможно использование подходящего б/у оборудования</li>
-                            <li>без учета доставки</li>
-                        </ul>
+                        <div class="investment__name">Товарные затраты</div>
                     </div>
-                    <div class="investment__price">от 1 395 000</div>
+                    <div class="investment__price">от 2 060 000</div>
+                    <div class="investment__price">от 2 550 000</div>
+                    <div class="investment__price">от 4 211 000</div>
+                    <div class="investment__item-inner">
+                        <div class="investment__txt">
+                            <p>Товарная загрузка*(от 21 500 руб. кв.м) без учёта листовки открытия</p>
+                        </div>
+                        <div class="investment__price">от 1 720 000</div>
+                        <div class="investment__price">от 2 150 000</div>
+                        <div class="investment__price">от 3 655 000</div>
+                    </div>
+                    <div class="investment__item-inner">
+                        <div class="investment__txt">
+                            <p>Праздничная листовка открытия<br> (печать, распространение, акционный товар в листовку)</p>
+                        </div>
+                        <div class="investment__price">от 340 000</div>
+                        <div class="investment__price">от 400 000</div>
+                        <div class="investment__price">от 556 000</div>
+                    </div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">Техника: компьютерная, кассовая, 1с+лицензии, минисервер
-                        </div>
+                        <div class="investment__name">Нетоварные затраты</div>
                     </div>
+                    <div class="investment__price">от 1 735 000</div>
+                    <div class="investment__price">от 2 015 000</div>
+                    <div class="investment__price">от 2 939 000</div>
+                    <div class="investment__item-inner">
+                        <div class="investment__txt">
+                            <p>Ремонт / дополнительное освещение<br> *при необходимости</p>
+                        </div>
+                        <div class="investment__price">от 90 000</div>
+                        <div class="investment__price">от 120 000</div>
+                        <div class="investment__price">от 120 000</div>
+                    </div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <p>Новое торговое оборудование<br> (от 8 200 руб. кв. м торг. площади)<br> *возможно использование подходящего б/у оборудования<br> *без учета доставки</p>
+                    </div>
+                    <div class="investment__price">от 720 000</div>
+                    <div class="investment__price">от 820 000</div>
+                    <div class="investment__price">от 1 394 000</div>
+                </div>
+                <div class="investment__item">
+                    <div class="investment__txt">
+                        <p>Техника: компьютерная, кассовая, 1С + лицензии, минисервер</p>
+                    </div>
+                    <div class="investment__price">от 250 000</div>
+                    <div class="investment__price">от 250 000</div>
                     <div class="investment__price">от 500 000</div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">Услуги сервисной компании:
-                        </div>
-                        <ul class="investment__list">
-                            <li>прорисовка периметра магазина, план расстановки ТО, 3D-моделирование, зонирование
-                                магазина по&nbsp;товарным группам, разработка дизайна вывесок навигации и&nbsp;листовки
-                                откртия,
-                                аудио-видео ролики, формирование установочного заказа, сопровождение проекта, очное
-                                обучение управляющего (в&nbsp;теч.&nbsp;6&nbsp;мес с&nbsp;даты старта проекта)
-                            </li>
-                        </ul>
+                        <p>ИТ-настройка программных продуктов и касс</p>
                     </div>
-                    <div class="investment__price">от 180 000</div>
+                    <div class="investment__price">15 000</div>
+                    <div class="investment__price">15 000</div>
+                    <div class="investment__price">15 000</div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">ИТ-настройка программных продуктов и касс</div>
+                        <p>Монтаж слаботочных сетей, интернет<br> *в зависимости от помещения</p>
                     </div>
-                    <div class="investment__price">10 000</div>
-                </div>
-                <div class="investment__item">
-                    <div class="investment__txt">
-                        <div class="investment__name">Монтаж слаботочных сетей, интернет</div>
-                        <ul class="investment__list">
-                            <li>в зависимости от помещения</li>
-                        </ul>
-                    </div>
+                    <div class="investment__price">30 000</div>
+                    <div class="investment__price">30 000</div>
                     <div class="investment__price">30 000</div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">Реклама внешняя и внутренняя</div>
-                        <ul class="investment__list">
-                            <li>Внутреннее оформление от 70 000 руб</li>
-                            <li>Световая вывеска (в зависимости от размеров) от 160 000 руб.</li>
-                            <li>Навигация (в зависимости от размеров) от 20 000 руб.</li>
-                        </ul>
+                        <p>Реклама внешняя и внутренняя<br> Внутреннее оформление от 30 000 руб.<br> Световая вывеска (в зависимости от размеров) от 160 000 руб.<br> Навигация (в зависимости от размеров) от 10 000 руб.</p>
                     </div>
+                    <div class="investment__price">от 200 000</div>
+                    <div class="investment__price">от 250 000</div>
                     <div class="investment__price">от 250 000</div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">Праздничное открытие на два дня</div>
-                        <ul class="investment__list">
-                            <li>маркетинговый бюджет на товары по спецценам от 145 00 руб.</li>
-                            <li>организация праздника (ведущий, игры для покупателей, сладвкая вата и пр.) от 50 000
-                                руб.
-                            </li>
-                            <li>печать листовки праздничного открытия от 50 000 руб.</li>
-                            <li>безадресная рассылка и рапсространение листовок (промоутеры) от 20 000 руб.</li>
-                            <li> дополнительные подарки в день розыгрыша от 20 000 руб.</li>
-                            <li>оформление фотозоны (роллап, прессвол) от 10 000 руб.</li>
-                            <li> Товары к праздничной листовке от 600 000 руб.</li>
-                        </ul>
+                        <p>Безопасность (ворота+защитные датчики)</p>
                     </div>
-                    <div class="investment__price">от 895 000</div>
+                    <div class="investment__price">от 230 000</div>
+                    <div class="investment__price">от 250 000</div>
+                    <div class="investment__price">от 270 000</div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">Безопасность (ворота+защитные датчики)
-                        </div>
+                        <p>ЗП сотрудников до технического открытия магазина<br>
+                            персонал (чел.) УМ, ЗУМ, кладовщик, продавцы-кассиры</p>
                     </div>
-                    <div class="investment__price">от 120 000</div>
+                    <div class="investment__price">от 130 000</div>
+                    <div class="investment__price">от 195 000</div>
+                    <div class="investment__price">от 260 000</div>
                 </div>
                 <div class="investment__item">
                     <div class="investment__txt">
-                        <div class="investment__name">ЗП сотрудников до технического открытия магазина</div>
-                        <ul class="investment__list">
-                            <li>персонал (чел.) УМ, ЗУМ, кладовщик, 5 продавцов-кассиров</li>
-                        </ul>
+                        <p>Праздничное открытие 2 дня (ведущий, подарки для покупателей)</p>
                     </div>
-                    <div class="investment__price">от 200 000</div>
+                    <div class="investment__price">от 70 000</div>
+                    <div class="investment__price">от 85 000</div>
+                    <div class="investment__price">от 100 000</div>
                 </div>
                 <div class="investment__item">
+                    <hr>
                     <div class="investment__txt">
-                        <div class="investment__name"><b>Итого</b></div>
+                        <div class="investment__name">Итого</div>
                     </div>
-                    <div class="investment__price">от 7 590 000 рублей</div>
+                    <div class="investment__price">от 3 980 000</div>
+                    <div class="investment__price">от 4 750 000</div>
+                    <div class="investment__price">от 7 335 000</div>
                 </div>
             </div>
         </div>
