js-reviews-open

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
                                     в связи с приходом в город сетевиков бизнес стал не очень интересен и было принято
                                     решение открыть что-то новое, что удовлетворит спрос населения.</p>
                             </div>
-                            <a href="" class="reviews__link">Читать далее...</a>
+                            <a href="" class="reviews__link js-reviews-open">Читать далее...</a>
                         </div>
                         <div class="swiper-slide">
                             <div class="reviews__name">МПР Крымск</div>
@@ -130,7 +130,7 @@
                                 Бесспорно, рассчитываю на дальнейшее сотрудничество, т.к. за эти полтора года вижу
                                 принципиальный рост и развитие проекта.</p>
                             </div>
-                            <a href="" class="reviews__link">Читать далее...</a>
+                            <a href="" class="reviews__link js-reviews-open">Читать далее...</a>
                         </div>
                         <div class="swiper-slide">
                             <div class="reviews__name">МПР Пенза</div>
@@ -153,7 +153,7 @@
                                 <p>Бесспорно, рассчитываю на дальнейшее сотрудничество, т.к. за эти полтора года вижу
                                     принципиальный рост и развитие проекта.</p>
                             </div>
-                            <a href="" class="reviews__link">Читать далее...</a>
+                            <a href="" class="reviews__link js-reviews-open">Читать далее...</a>
                         </div>
                         <div class="swiper-slide">
                             <div class="reviews__name">МПР Пенза</div>
@@ -176,7 +176,7 @@
                                 <p>Бесспорно, рассчитываю на дальнейшее сотрудничество, т.к. за эти полтора года вижу
                                     принципиальный рост и развитие проекта.</p>
                             </div>
-                            <a href="" class="reviews__link">Читать далее...</a>
+                            <a href="" class="reviews__link js-reviews-open">Читать далее...</a>
                         </div>
                     </div>
                 </div>
